# dynawo-replay-AIA

./: .gitignore  README.md  Solver_pere.xml  pyproject.toml
code/: LICENSE  MANIFEST.in  build_and_install.sh  pyproject.toml
code/src/dynawo_replay/: allcurves.py  attic.py  extractvars.sh  genallcrv.sh  replay.py  simulator.py
code/src/dynawo_replay.egg-info/: PKG-INFO
data/: .gitignore
data/FicheI3SM/: FicheI3SM.dyd  FicheI3SM.jobs  FicheI3SM.par  FicheI3SM_orig.crv  Producer.dyd  Producer.ini  Producer.par
data/IEEE57/IEEE57_Fault/: IEEE57.jobs  IEEE57.par  IEEE57_terminals.crv
data/Kundur_Example13/: KundurExample13.crv  KundurExample13.jobs  KundurExample13_terminals.crv
data/TestCase3/: TestCase3.crv  TestCase3.jobs  TestCase3_terminals.crv
data/examples/DynaSwing/ENTSOE/TestCase1/: TestCase1.jobs
data/examples/DynaSwing/ENTSOE/TestCase2/: TestCase2.crv  TestCase2.jobs
data/examples/DynaSwing/ENTSOE/TestCase3/: TestCase3.jobs
data/examples/DynaSwing/IEEE14/IEEE14_Fault/: IEEE14.jobs  IEEE14_replay.crv  IEEE14_terminals.crv
data/examples/DynaSwing/IEEE57/IEEE57_Fault/: IEEE57.crv  IEEE57.jobs  IEEE57_states.crv
data/examples/DynaSwing/Kundur_Example13/: KundurExample13.jobs
data/examples/DynaSwing/WECC/PV/WECCPVCurrentSource/: WECCPV.crv  WECCPV.jobs
data/examples/DynaSwing/WECC/PV/WECCPVVoltageSource/: WECCPVVSource.crv  WECCPVVSource.jobs
data/examples/DynaSwing/WECC/Wind/WECCWTG4ACurrentSource/: WECCWTG4A.crv  WECCWTG4A.jobs
data/examples/DynaSwing/WECC/Wind/WECCWTG4BCurrentSource/: WECCWTG4B.crv  WECCWTG4B.jobs
data/examples/DynaSwing/WSCC9/WSCC9_Fault/: WSCC9.jobs  WSCC9_orig.crv  WSCC9_replay.crv  WSCC9_terminals.crv
data/examples/IEEE57/IEEE57_Fault/: IEEE57.jobs
data/largecase/t0/: fic.crv  fic.dyd  fic.jobs  fic.par
data/largecase/tFin/: fic.dyd  fic.jobs  fic.py  fic_terminals.crv
data/largecase/tFinIEEE14/: IEEE14.dyd  IEEE14.jobs  IEEE14.par
data/largecase/tFin_genvars/: fic.crv  fic.jobs  fic.par  fic.py  outputState.dmp
data/smallcase/: IEEE57.dyd  IEEE57_replay.crv  IEEE57_terminals.crv
docs/: statusreport.md
notebooks/: error_analysis.py  inspect_ddb.py  mo_test_replay.py  postprocessing_analysis.ipynb  replay_error_analysis_ieee118.ipynb  scaling_analysis.ipynb  supported_models_analysis.ipynb  test_replay.py
src/: allcurves.py  attic.py  genallcrv.sh  replay.py  simulator.py
src/dynawo_replay/: __init__.py  allcurves.py  cli.py  config.py  exceptions.py  lp_filters.py  metrics.py  plotting.py  replay.py  simulation.py  supported_models.csv  utils.py
src/dynawo_replay/schemas/: __init__.py  constraints.py  criteria.py  curves_input.py  curves_output.py  ddb.py  ddb_desc.py  dyd.py  ext_var.py  final_state_values_input.py  final_state_values_output.py  io.py  jobs.py  lost_equipments.py  parameters.py  timeline.py
src/dynawo_replay/templates/replay_base/: replay.crv  replay.dyd  replay.jobs  replay.par
src/results/IEEE57/: IEEE57_states_compressed_rank_10.npy
tests/: test_cli.py  test_dynawo.py  test_old_code.py  test_replay.py
