[project]
name = "dynawo-replay"
version = "0.2.0"
description = "A tool to replay curves"
authors = [
    {name="Martín Campos", email="camposm@aia.es"},
    {name="Guiu Oms", email="omsg@aia.es"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contexttimer>=0.3.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic-settings>=2.7.1",
    "scipy>=1.15.2",
    "typer>=0.15.1",
    "xsdata>=24.12",
]

[project.optional-dependencies]
analytics = [
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "plotly>=6.0.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "networkx>=3.4.2",
    "polars>=1.27.0",
    "pypowsybl>=1.9.0",
    "ipykernel>=6.29.5",
    "marimo>=0.10.17",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "openai>=1.64.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "xsdata[cli,lxml]>=24.12",
]

[project.scripts]
dynawo-replay = "dynawo_replay.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
